testsuite/tests/properties/invalid_call/property_annot.lkt
import common

class BarNode: FooNode {
    @property fun get_int(): Int = 1

    @exported fun p(): Int = node.get_int()
}
